Attempt to fix LESS not working on server

--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
     ('__proto__' in {} ? 'js/vendor/zepto' : 'js/vendor/jquery') +
     '.js><\/script>')
     </script>
-    <script src="js/foundation.min.js"></script>
-    <script src="js/kinetic-v4.7.4.min.js"></script>
-    <script src="js/less-1.5.0.min.js"></script>
+    
+    <script type="text/javascript" src="js/foundation.min.js"></script>
+    <script type="text/javascript" src="js/kinetic-v4.7.4.min.js"></script>
+    <script type="text/javascript" src="js/less-1.5.0.min.js"></script>
 
     <script type="text/javascript">
       $( window ).resize(function() {
@@ -54,15 +55,15 @@
     </script>
   
 
-    <script src="js/vendor/custom.modernizr.js"></script>
-    <script src="js/underscore-min.js"></script>
-    <script src="js/backbone-min.js"></script>
-    <script src="js/backbone-min.js"></script>
-    <script src="js/models/uigate.js"></script>
-    <script src="js/collections/uigates.js"></script>
-    <script src="js/views/uigateview.js"></script>
-    <script src="js/views/uigatesview.js"></script>
-    <script type="text/javascript">
+    <script type="text/javascript" src="js/vendor/custom.modernizr.js"></script>
+    <script type="text/javascript" src="js/underscore-min.js"></script>
+    <script type="text/javascript" src="js/backbone-min.js"></script>
+    <script type="text/javascript" src="js/backbone-min.js"></script>
+    <script type="text/javascript" src="js/models/uigate.js"></script>
+    <script type="text/javascript" src="js/collections/uigates.js"></script>
+    <script type="text/javascript" src="js/views/uigateview.js"></script>
+    <script type="text/javascript" src="js/views/uigatesview.js"></script>
+    <script type="text/javascript" type="text/javascript">
         $(function() {
         var andGate = new UIGate({x: 0});
 
