--- a/index.html
+++ b/index.html
@@ -108,24 +108,24 @@
     </div>
 
 	<div class="row">
-        <div class="large-2 columns sidebar sidebar-left height-100">
+        <div class="large-2 columns sidebar sidebar-left">
             <div data-pane="pane-1" class="button dropdown slider" href="#">Basic Gates</div>
-            <div id="pane-1" class="pane"></div>
+            <div id="pane-1" class="panel" style="display:none;"></div>
             <div data-pane="pane-2" class="button dropdown slider" href="#">Composite Gates</div>
-            <div id="pane-2" class="pane"></div>
+            <div id="pane-2" class="panel" style="display:none;"></div>
             <div data-pane="pane-3" class="button dropdown slider" href="#">Memory</div>
-            <div id="pane-3" class="pane"></div>
+            <div id="pane-3" class="panel" style="display:none;"></div>
             <div data-pane="pane-4" class="button dropdown slider" href="#">Timing</div>
-            <div id="pane-4" class="pane"></div>
+            <div id="pane-4" class="panel" style="display:none;"></div>
             <div data-pane="pane-5" class="button dropdown slider" href="#">Input/Output</div>
-            <div id="pane-5" class="pane"></div>
+            <div id="pane-5" class="panel" style="display:none;"></div>
             <div data-pane="pane-6" class="button dropdown slider" href="#">Custom</div>
-            <div id="pane-6" class="pane"></div>
+            <div id="pane-6" class="panel" style="display:none;"></div>
         </div>
-        <div class="large-8 columns">
-            <div id="workbench" class="height-100" style="width:100%, height:100%;"></div>
+        <div class="large-8 columns collpase">
+            <div id="workbench" class="height-100" style="width:100%"></div>
         </div>
-        <div class="large-2 columns sidebar sidebar-right height-100">
+        <div class="large-2 columns sidebar sidebar-right">
         </div>
 	</div>
 
